# kubez-ansible

./: .ansible-lint  .gitignore  .gitreview  .yamllint  AUTHORS  ChangeLog  Dockerfile  Makefile  README.md  README.rst  read.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml  deployment.yml  docker-image.yml  pylint.yml
ansible/: add-node.yml  authorized-key.yml  authorized-keys.yml  etcd.yml  gather-facts.yml  kubernetes-hosts.yml  post-deploy.yml  site.yml
ansible/filter_plugins/: to_content.py  to_socket.py
ansible/group_vars/: all.yml
ansible/inventory/: all-in-one  multinode
docker/: Dockerfile  start.sh
docs/apply/: Grafana-Add-Loki.md  Istio.md  Loki.md  Metrics Server.md  Promtail.md  artifactory.md  ceph-guide.md  cert-manager.md  chaos-mesh.md  cilium.md  dashboard.md  dify.md  etcd-backup.md  grafana.md  harbor.md  helm3-guide.md  ingress.md  install-guide.md  jenkins.md  kuberhealthy.md  loggie.md  loki.md  metallb.md  metrics.md  minio.md  nfs.md  prometheus.md  promethues-operator.md  promtail.md  tekton.md
docs/install/: add-node.md  admin-k8src.md  all-in-one.md  app-integration-doc.md  auth-key.md  availability.md  container-deploy.md  destroy.md  expansion.md  integrated-app-doc.md  k8sdeploy.md  multinode.md  nexus部署文档.md  offline-package.md  passwd-key.md  prerequisites.md  setup-registry.md
docs/paas/: dashboard.md  ingress.md  kafka.md  mongodb.md  olm.md  postgres-operator.md  postgres.md  rabbitmq.md  redis.md  zookeeper.md
etc/kubernetes-ansible/: globals.yml
etc/kubez/: globals.yml
examples/: test-deploy.yaml  test-job.yaml  test-nfs.yaml  test-nginx.yaml
kubernetes_ansible/: to_content.py
kubez_ansible/: get_runtime_type.py  to_socket.py
releasenotes/notes/: add-consul-support-622e06899ae90eb9.yaml  add-external-ceph-support-622e06876ae90eb7.yaml  add-features-a5de8a339f25c1n3.yaml  add-gerrit-support-622e06876ae90eb5.yaml  add-grafana-support-622e06899ae90eb9.yaml  add-kong-support-622e06899ae90eb5.yaml  add-mariadb-support-622e06876ae90eb6.yaml  add-redis-support-622e06899ae90eb8.yaml  add-ubuntu-suppored-for-deployment-622e06876ae90eb8.yaml  add-ubuntu-supported-for-deployment-622e06876ae90eb8.yaml
releasenotes/source/: conf.py  index.rst
tests/: test-demo.yml  toolbox.yaml
tools/: .all_in_one.sh.swp  admin-user-sa-rbac.yaml  all_in_one.sh  all_in_one.sh-r  all_in_one_for_ubuntu_20.04.sh  kubernetes-ansible  kubez-ansible  prepare_clone.sh  setup_env.sh  setup_env.sh-r  setup_helm.sh  setup_nexus.sh  setup_registry.sh  test-claim.yaml  test-ingress.yaml  test-pod.yaml  test-rbd.yaml  test-tools.yaml
tools/kubez-ansibepkg/: README.md  k8sdeploy.sh  k8senv.yaml  k8srpmdownload.sh
(+296 files in other folders)
