[metadata]
name = kubez-ansible
summary = Ansible Deployment of Kubernetes
description-file =
    README.md
author = Caoyingjun
author-email = 284224086@qq.com
home-page = https://github.com/yingjuncao/kubez-ansible
license = Apache License, Version 2.0
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[files]
packages =
    kubez_ansible
data_files =
    share/kubez-ansible/ansible = ansible/*

scripts =
    tools/kubez-ansible
